--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "resetDB":"node prisma/resetDB.js"
   },
   "keywords": [],
   "author": "",
