--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
     "seed": "node prisma/seed.js",
-    "resetDB":"node prisma/resetDB.js"
+    "resetDB": "node prisma/resetDB.js"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +15,14 @@
   "dependencies": {
     "@prisma/client": "5.15.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "uuid": "^10.0.0"
   },
