--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "sanitize-html": "^2.13.0",
+    "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
   },
